# pludux

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  sample.CMakeUserPresets.json  setup.py
apps/backtest/gui/: CMakeLists.txt
apps/backtest/gui/patch/glfw3webgpu/: CMakeLists.txt
apps/backtest/gui/patch/implot/: implot.cpp
apps/backtest/gui/src/: actions.cxx  actions.hpp  app_state.cpp  app_state.cxx  app_state.hpp  app_state_data.cxx  app_state_data.hpp  application.cpp  application.cxx  application.hpp  application_state.cxx  emscripten_js_imports.hpp  main.cpp  serialization.cxx  serialization.hpp  state_arena.cxx  state_descriptor.cxx  ui_state.cxx  window_context.cxx  windows.cxx  windows.hpp
apps/backtest/gui/src/actions/: app_poly_action.hpp  change_strategy_json_action.cxx  change_strategy_json_action.hpp  change_strategy_json_file_action.cpp  change_strategy_json_file_action.hpp  change_strategy_json_str_action.cpp  change_strategy_json_str_action.hpp  edit_strategy_action.cxx  load_asset_csv_action.cxx  load_asset_csv_action.hpp  load_asset_csv_file_action.cpp  load_asset_csv_file_action.hpp  load_asset_csv_str_action.cpp  load_asset_csv_str_action.hpp  load_backtests_setup_action.cxx  load_backtests_setup_action.hpp  load_backtests_setup_file_action.cpp  load_backtests_setup_file_action.hpp  load_backtests_setup_string_action.cpp  load_backtests_setup_string_action.hpp  load_strategy_json_action.cxx
apps/backtest/gui/src/windows/: assets_window.cpp  assets_window.cxx  assets_window.hpp  backtest_summary_window.cpp  backtest_summary_window.cxx  backtest_summary_window.hpp  backtesting_summary_window.cpp  backtesting_summary_window.hpp  backtests_window.cpp  backtests_window.cxx  backtests_window.hpp  brokers_window.cxx  dockspace_window.cpp  dockspace_window.cxx  dockspace_window.hpp  markets_window.cxx  plot_data_window.cpp  plot_data_window.cxx  plot_data_window.hpp  profiles_window.cpp  profiles_window.cxx  profiles_window.hpp  strategies_window.cpp  strategies_window.cxx  strategies_window.hpp  trade_journal_window.cpp  trade_journal_window.cxx  (+1 more)
apps/backtest/gui/web/: index.html  pludux_library.js
apps/backtest/lib/: CMakeLists.txt
apps/backtest/lib/sources/: asset_quote.cpp  backtest.cpp  backtest.cxx  quote_access.cpp
apps/backtest/tests/: CMakeLists.txt
apps/backtest/tests/src/: test_trade_session.cpp
libs/sources/: CMakeLists.txt
libs/sources/include/pludux/: asset.hpp  asset_data_provider.hpp  asset_history.cxx  asset_history.hpp  asset_snapshot.cxx  asset_snapshot.hpp  config_parser.cxx  config_parser.hpp  pludux.hpp  quote.hpp  quote_series.hpp  screener.cxx  screener.hpp  series.cxx  series.hpp  ta.cxx  ta.hpp
libs/sources/src/: any_method_context.cxx  asset.cpp  asset_data.cxx  asset_data_provider.cpp  asset_history.cpp  asset_history.cxx  asset_quote_field_resolver.cxx  asset_series.cxx  asset_snapshot.cpp  asset_snapshot.cxx  conditions.cxx  config_parser.cpp  config_parser.cxx  default_method_context.cxx  exports.cxx  method_contextable.cxx  module.cxx  pludux.cpp  pludux.cxx  quote.cpp  quote_series.cpp  screener.cxx  series.cpp  series.cxx  series_output.cxx  series_results_collector.cxx  ta.cpp
libs/sources/src/conditions/: all_of_method.cxx  any_condition_method.cxx  any_of_method.cxx  boolean_method.cxx  comparison_method.cxx  crossover_method.cxx  crossunder_method.cxx  fixed_method.cxx  logical_method.cxx
libs/sources/src/screener/: abs_diff_method.cpp  all_of_filter.cpp  all_of_filter.cxx  any_of_filter.cpp  any_of_filter.cxx  arithmetic_method.cpp  asset_data_provider.cpp  atr_method.cpp  bb_method.cpp  bullish_divergence_method.cpp  changes_method.cpp  crossover_filter.cpp  crossunder_filter.cpp  data_method.cpp  field_method.cpp  greater_equal_filter.cpp  greater_than_filter.cpp  hidden_bullish_divergence_method.cpp  kc_method.cpp  less_than_filter.cpp  logical_filter.cxx  lookback_method.cpp  macd_method.cpp  method_registry.cpp  output_by_name_method.cpp  reference_method.cpp  screener_filter.cpp  screener_method.cpp  sma_method.cpp  stoch_method.cpp  stoch_rsi_method.cpp  value_method.cpp
libs/sources/src/series/: adaptive_ma_method.cxx  any_method.cxx  any_method_context.cxx  any_series_method.cxx  atr_method.cxx  atr_series.cxx  bb_method.cxx  bb_series.cxx  bullish_divergence_series.cxx  cached_results_ema_method.cxx  cached_results_rma_method.cxx  change_method.cxx  change_series.cxx  data_method.cxx  data_series.cxx  default_method_context.cxx  ema_method.cxx  ema_series.cxx  hidden_bullish_divergence_series.cxx  highest_method.cxx  hma_method.cxx  hma_series.cxx  kc_method.cxx  kc_series.cxx  lookback_method.cxx  lookback_series.cxx  lowest_method.cxx  ma_method_type.cxx  macd_method.cxx  macd_series.cxx  method_call_context.cxx  method_contextable.cxx  method_output.cxx  method_registry.cxx  ohlcv_method.cxx  operators_method.cxx  operators_series.cxx  output_by_name_series.cxx  percentage_method.cxx  pivot_lows_series.cxx  (+31 more)
libs/tests/: CMakeLists.txt
libs/tests/src/: hello_world_test.cpp  test_abs_diff_method.cpp  test_all_of_filter.cpp  test_any_method.cpp  test_any_of_filter.cpp  test_any_series_method.cpp  test_arithmetic_method.cpp  test_asset.cpp  test_asset_history.cpp  test_asset_quote_field_resolver.cpp  test_asset_snapshot.cpp  test_atr_method.cpp  test_bb_method.cpp  test_boolean_filters.cpp  test_bullish_divergence_series.cpp  test_change_method.cpp  test_condition_method.cpp  test_config_parser.cpp  test_crossover_filter.cpp  test_crossunder_filter.cpp  test_data_method.cpp  test_ema_method.cpp  test_equal_filter.cpp  test_field_method.cpp  test_fixed_filters.cpp  test_greater_equal_filter.cpp  test_greater_than_filter.cpp  test_hidden_bullish_divergence_series.cpp  test_hma_method.cpp  test_kc_method.cpp  test_less_equal_filter.cpp  test_less_than_filter.cpp  test_logical_filters.cpp  test_lookback_method.cpp  test_macd_method.cpp  test_method_registry.cpp  test_not_equal_filter.cpp  test_ohlcv_method.cpp  test_operators_methods.cpp  test_percentage_method.cpp  (+20 more)
(+256 files in other folders)
